# Data-Science-For-Security-Engineers

./: .gitignore  Data_Science_for_Security_Engineers.ipynb  README.md  pyproject.toml  requirements.txt
detection_baseline/: __init__.py  automation.py  behavioral.py  datasets.py  detectors.py  eda.py  probabilistic.py  recommender.py  statistics.py
statistics/: .gitignore  Data Science foundations.ipynb  airline_delay_causes.csv
statistics/.ipynb_checkpoints/: Data Science foundations-checkpoint.ipynb
tests/: test_automation.py  test_behavioral.py  test_datasets.py  test_detectors.py  test_eda.py  test_probabilistic.py  test_recommender.py  test_statistics.py
